fix: apply review comments