@@ -5,7 +5,7 @@
  * Licensed under the Camunda License 1.0. You may not use this file
  * except in compliance with the Camunda License 1.0.
  */
-package io.camunda.zeebe.engine.processing.mapping;
+package io.camunda.zeebe.engine.processing.mappingrule;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.tuple;
@@ -13,23 +13,18 @@ import static org.assertj.core.api.AssertionsForClassTypes.tuple;
 import io.camunda.zeebe.engine.state.distribution.DistributionQueue;
 import io.camunda.zeebe.engine.util.EngineRule;
 import io.camunda.zeebe.protocol.record.Record;
-import io.camunda.zeebe.protocol.record.RecordType;
 import io.camunda.zeebe.protocol.record.ValueType;
 import io.camunda.zeebe.protocol.record.intent.CommandDistributionIntent;
 import io.camunda.zeebe.protocol.record.intent.MappingRuleIntent;
-import io.camunda.zeebe.protocol.record.intent.RoleIntent;
-import io.camunda.zeebe.protocol.record.value.CommandDistributionRecordValue;
-import io.camunda.zeebe.test.util.Strings;
 import io.camunda.zeebe.test.util.record.RecordingExporter;
 import io.camunda.zeebe.test.util.record.RecordingExporterTestWatcher;
 import java.time.Duration;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TestWatcher;
 
-public class CreateMappingMultiPartitionTest {
+public class UpdateMappingRuleMultiPartitionTest {
 
   private static final int PARTITION_COUNT = 3;
 
@@ -37,73 +32,64 @@ public class CreateMappingMultiPartitionTest {
   @Rule public final TestWatcher testWatcher = new RecordingExporterTestWatcher();
 
   @Test
-  public void shouldDistributeMappingCreateCommand() {
-    // when
-    final var mappingId = Strings.newRandomValidIdentityId();
+  public void shouldDistributeMappingUpdateCommand() {
+    // given
     final var claimName = UUID.randomUUID().toString();
     final var claimValue = UUID.randomUUID().toString();
     final var name = UUID.randomUUID().toString();
+    final var id = UUID.randomUUID().toString();
     engine
-        .mapping()
-        .newMapping(mappingId)
-        .withName(name)
+        .mappingRule()
+        .newMapping(id)
         .withClaimName(claimName)
         .withClaimValue(claimValue)
+        .withName(name)
         .create();
 
-    assertThat(
-            RecordingExporter.records()
-                .withPartitionId(1)
-                .limit(record -> record.getIntent().equals(CommandDistributionIntent.FINISHED)))
-        .extracting(
-            Record::getIntent,
-            Record::getRecordType,
-            r ->
-                // We want to verify the partition id where the creation was distributing to and
-                // where it was completed. Since only the CommandDistribution records have a
-                // value that contains the partition id, we use the partition id the record was
-                // written on for the other records.
-                r.getValue() instanceof CommandDistributionRecordValue
-                    ? ((CommandDistributionRecordValue) r.getValue()).getPartitionId()
-                    : r.getPartitionId())
-        .startsWith(
-            tuple(MappingRuleIntent.CREATE, RecordType.COMMAND, 1),
-            tuple(MappingRuleIntent.CREATED, RecordType.EVENT, 1),
-            tuple(CommandDistributionIntent.STARTED, RecordType.EVENT, 1))
-        .containsSubsequence(
-            tuple(CommandDistributionIntent.DISTRIBUTING, RecordType.EVENT, 2),
-            tuple(CommandDistributionIntent.ACKNOWLEDGE, RecordType.COMMAND, 2),
-            tuple(CommandDistributionIntent.ACKNOWLEDGED, RecordType.EVENT, 2))
-        .containsSubsequence(
-            tuple(CommandDistributionIntent.DISTRIBUTING, RecordType.EVENT, 3),
-            tuple(CommandDistributionIntent.ACKNOWLEDGE, RecordType.COMMAND, 3),
-            tuple(CommandDistributionIntent.ACKNOWLEDGED, RecordType.EVENT, 3))
-        .endsWith(tuple(CommandDistributionIntent.FINISHED, RecordType.EVENT, 1));
+    // when
+    engine
+        .mappingRule()
+        .updateMapping(id)
+        .withClaimName(claimName + "New")
+        .withClaimValue(claimValue + "New")
+        .withName(name + "New")
+        .update();
+
     for (int partitionId = 2; partitionId < PARTITION_COUNT; partitionId++) {
       assertThat(
               RecordingExporter.mappingRuleRecords()
                   .withPartitionId(partitionId)
-                  .limit(record -> record.getIntent().equals(MappingRuleIntent.CREATED))
-                  .collect(Collectors.toList()))
+                  .skip(2)
+                  .limit(record -> record.getIntent().equals(MappingRuleIntent.UPDATED))
+                  .toList())
           .extracting(Record::getIntent)
-          .containsExactly(MappingRuleIntent.CREATE, MappingRuleIntent.CREATED);
+          .containsExactly(MappingRuleIntent.UPDATE, MappingRuleIntent.UPDATED);
     }
   }
 
   @Test
   public void shouldDistributeInIdentityQueue() {
-    // when
-    final var mappingId = Strings.newRandomValidIdentityId();
+    // given
     final var claimName = UUID.randomUUID().toString();
     final var claimValue = UUID.randomUUID().toString();
     final var name = UUID.randomUUID().toString();
+    final var id = UUID.randomUUID().toString();
     engine
-        .mapping()
-        .newMapping(mappingId)
+        .mappingRule()
+        .newMapping(id)
         .withClaimName(claimName)
         .withClaimValue(claimValue)
         .withName(name)
         .create();
+
+    // when
+    engine
+        .mappingRule()
+        .updateMapping(id)
+        .withClaimName(claimName + "New")
+        .withClaimValue(claimValue + "New")
+        .withName(name + "New")
+        .update();
 
     // then
     assertThat(
@@ -118,22 +104,26 @@ public class CreateMappingMultiPartitionTest {
   public void distributionShouldNotOvertakeOtherCommandsInSameQueue() {
     // given the role creation distribution is intercepted
     for (int partitionId = 2; partitionId <= PARTITION_COUNT; partitionId++) {
-      engine.interceptInterPartitionIntent(partitionId, RoleIntent.CREATE);
+      engine.interceptInterPartitionIntent(partitionId, MappingRuleIntent.CREATE);
     }
-
-    final var roleName = UUID.randomUUID().toString();
-    engine.role().newRole(roleName).create();
-    final var mappingId = Strings.newRandomValidIdentityId();
     final var claimName = UUID.randomUUID().toString();
     final var claimValue = UUID.randomUUID().toString();
     final var name = UUID.randomUUID().toString();
+    final var id = UUID.randomUUID().toString();
     engine
-        .mapping()
-        .newMapping(mappingId)
+        .mappingRule()
+        .newMapping(id)
         .withClaimName(claimName)
         .withClaimValue(claimValue)
         .withName(name)
         .create();
+    engine
+        .mappingRule()
+        .updateMapping(id)
+        .withClaimName(claimName + "New")
+        .withClaimValue(claimValue + "New")
+        .withName(name + "New")
+        .update();
 
     // Increase time to trigger a redistribution
     engine.increaseTime(Duration.ofMinutes(1));
@@ -144,7 +134,7 @@ public class CreateMappingMultiPartitionTest {
                 .limit(2))
         .extracting(r -> r.getValue().getValueType(), r -> r.getValue().getIntent())
         .containsExactly(
-            tuple(ValueType.ROLE, RoleIntent.CREATE),
-            tuple(ValueType.MAPPING_RULE, MappingRuleIntent.CREATE));
+            tuple(ValueType.MAPPING_RULE, MappingRuleIntent.CREATE),
+            tuple(ValueType.MAPPING_RULE, MappingRuleIntent.UPDATE));
   }
 }
